--- a/Vectra.CLI/Vectra.CLI.csproj
+++ b/Vectra.CLI/Vectra.CLI.csproj
@@ -5,6 +5,16 @@
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <IsPackable>false</IsPackable>
+        <Company>Vectra</Company>
+        <Version>1.0.0</Version>
+        <AssemblyName>vecc</AssemblyName>
     </PropertyGroup>
+    
+    <ItemGroup>
+        <PackageReference Include="System.CommandLine" Version="2.0.0-beta5.25306.1" />
+        <PackageReference Include="Vectra.Compiler" Version="1.0.1" />
+        <PackageReference Include="Vectra.VM" Version="1.0.1" />
+    </ItemGroup>
 
 </Project>
