--- a/.releaserc.json
+++ b/.releaserc.json
@@ -12,6 +12,7 @@
     [
       "@semantic-release/exec",
       {
+        "verifyConditionsCmd": "chmod +x prepare-release.sh",
         "prepareCmd": "./prepare-release.sh"
       }
     ],
