--- a/Vectra.CLI/Vectra.CLI.csproj
+++ b/Vectra.CLI/Vectra.CLI.csproj
@@ -12,6 +12,7 @@
     </PropertyGroup>
     
     <ItemGroup>
+        <PackageReference Include="NuGet.Versioning" Version="6.14.0" />
         <PackageReference Include="System.CommandLine" Version="2.0.0-beta5.25306.1" />
         <PackageReference Include="Vectra.Compiler" Version="1.0.1" />
         <PackageReference Include="Vectra.VM" Version="1.0.1" />
