--- a/.releaserc.json
+++ b/.releaserc.json
@@ -13,8 +13,7 @@
       "@semantic-release/exec",
       {
         "verifyConditionsCmd": "chmod +x prepare-release.sh",
-        "prepareCmd": "./prepare-release.sh ${nextRelease.version}",
-        
+        "prepareCmd": "./prepare-release.sh ${nextRelease.version}"
       }
     ],
     [
